testdata/cases/invalid/modules/wrong_arg.js
definition.session("hello World", function(ctx) {
  ctx.get("/", "invalid option");
});
